languages/montiarc-fe/src/test/resources/contextconditions/invalid/WrongDefaultParameterType.arc
package invalid;


component WrongDefaultParameterType(int x = 5, int y="three") {

}